<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_screens"
    tools:context="gov.jbb.missaonascente.view.RegisterScreenActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="200dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" >

        <EditText
            android:id="@+id/nicknameEditText"
            android:textSize="14sp"
            android:typeface="sans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:hint="@string/nickname"
            android:layout_marginTop="10dp"
            android:maxLines="1"
            android:maxLength="16"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/passwordEditText"
            android:textSize="14sp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_below="@id/nicknameEditText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:hint="@string/password"
            android:typeface="sans"/>

        <EditText
            android:id="@+id/passwordConfirmEditText"
            android:textSize="14sp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_below="@id/passwordEditText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:hint="@string/confirmPassword"
            android:typeface="sans"/>

        <EditText
            android:id="@+id/emailEditText"
            android:textSize="14sp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:layout_below="@+id/passwordConfirmEditText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:hint="@string/email"
            android:typeface="sans"/>

    </RelativeLayout>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:typeface="sans"
        android:background="@drawable/shape_rectangle_green"
        android:textColor="#FFFFFF"
        android:text="@string/register"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_below="@+id/relativeLayout"
        android:layout_centerHorizontal="true" />
</RelativeLayout>